1999-10-12  James Henstridge  <james@daa.com.au>

	* objects/flowchart/flowchart.c: added new shapes to sheet.

	* objects/flowchart/display.shape:
	* objects/flowchart/transaction.shape: new shapes.

	* AUTHORS: added my name to the spec file.

	* dia.spec: include the dia desktop entry to the spec file.

	* Makefile.am: install the dia.desktop file.

	* dia.desktop: added a gnome desktop entry so you can start dia
	from the gnome panel menu.

1999-10-11  James Henstridge  <james@daa.com.au>

	* objects/custom/custom_object.c:
	* objects/custom/shape_info.c: warning fixes.

	* objects/flowchart/document.shape: a shape file for the `document'
	flowchart shape.

	* lib/custom.h: new header with the custom shape prototypes.

	* app/app_procs.c: register custom objects as well.
	(register_objects_in): close shared libraries if they don't load
	correctly, and call g_module_make_resident on libraries that load
	correctly.

	* app/Makefile.am (dia_LDADD): added libcustom_objects.a to link list.

	* objects/custom/custom.c: removed get_version, added custom_ prefix
	to register_objects and register_sheets.

	* objects/custom/Makefile.am: converted to a normal library.

1999-10-10  Alexander Larsson  <alla@lysator.liu.se>

	* app/lineprops_area.c:
	* app/render_svg.c:
	* lib/objchange.c:
	* objects/custom/shape_info.c:
	* objects/flowchart/box.c:
	* objects/flowchart/diamond.c:
	* objects/flowchart/ellipse.c:
	* objects/flowchart/parallelogram.c:
	* objects/network/flash.c:
	* objects/network/scead-plug.c:
	* objects/sybase/client.c:
	Removed -Wall warnings.
	
	* objects/network/bus.c:
	Removed unused functions.

	* objects/FS/flow-ortho.c:
	* objects/FS/flow-poly.c:
	* objects/FS/flow.c:
	* objects/FS/function.c:
	
	Implemented "non-implemented" undo for FS objects.
	Now at least it won't crash.
	
1999-10-10  Alexander Larsson  <alla@lysator.liu.se>

	* objects/network/bus.c:
	Implemented undo.
	Handles are now added and removed using the object menu.