@@ -1,0 +1,36 @@
+/* XPM */
+static char * landscape_xpm[] = {
+"40 30 3 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFFFF",
+"      ................................  ",
+"     ..++++++++++++++++++++++++++++++.  ",
+"    ...++++++++++++++++++++++++++++++...",
+"   ....++++++++++++++++++++++++++++++...",
+"  .....++++++++++++++++++++++++++++++...",
+" ......++++++++++++++++++++++++++++++...",
+".......++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++++++++++++...",
+"........................................",
+"  ......................................",
+"  ......................................"};
