@@ -1,0 +1,46 @@
+/* XPM */
+static char * portrait_xpm[] = {
+"30 40 3 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFFFF",
+"      ......................  ",
+"     ..++++++++++++++++++++.  ",
+"    ...++++++++++++++++++++...",
+"   ....++++++++++++++++++++...",
+"  .....++++++++++++++++++++...",
+" ......++++++++++++++++++++...",
+".......++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+".++++++++++++++++++++++++++...",
+"..............................",
+"  ............................",
+"  ............................"};
